# zectrix-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: board.rs  epd.rs  lib.rs  slint_ui.rs  wifi.rs
ui/: main.slint
